border countries screen - part 2

--- a/app/src/main/assets/TODO.txt
+++ b/app/src/main/assets/TODO.txt
@@ -1,4 +1,8 @@
 progress bar
+coroutines
+ldTransformations
 error handling
 code review
 disable dark-mode
+--coroutine--
+cancel upon quiting fragment
